--- a/index.html
+++ b/index.html
@@ -511,8 +511,8 @@
 				</div>
 			</div>
 		</div>
-		<div class="copyr">
-			<p> &copy; PoritoshDavid</p>
+		<div class="copyright">
+			 &copy; Sohel Rana
 		</div>
 	</div>
 
